<resources>
    <string name="app_name">SQL Database</string>
    <string name="view_all">View All</string>
    <string name="student_details">Student Details</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="marks">Marks</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="view">View</string>
    <string name="marks_hint">Marks</string>
    <string name="roll_number_hint">Roll Number</string>
    <string name="name_hint">Name</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
